[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reviewmetric-mcp"
version = "1.0.2"
description = "15-agent scientific peer review and manuscript analysis pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "requests>=2.31.0"
]

[project.scripts]
reviewmetric-mcp = "reviewmetric_mcp.server:mcp.run"